@startuml

title __SERVICE's Class Diagram__\n

  namespace ub.edu.resources.service {
    interface ub.edu.resources.service.AbstractFactoryData {
        {abstract} + createDAOExcursio()
        {abstract} + createDAOSoci()
        {abstract} + createDAOEspecie()
    }
  }
  

  namespace ub.edu.resources.service {
    class ub.edu.resources.service.DataService {
        + DataService()
        + getAllExcursions()
        + getAllSocis()
        + getSociByUsername()
        + cercaExcursions()
        + getLlistaEspecies()
        + afegirEspecie()


    }
  }
  

  namespace ub.edu.resources.service {
    class ub.edu.resources.service.FactoryMOCK {
        + createDAOExcursio()
        + createDAOSoci()
    }
  }
  
namespace ub.edu.resources.dao {
    interface ub.edu.resources.dao.DAOEspecie {
    }
  }


  namespace ub.edu.resources.dao {
    interface ub.edu.resources.dao.DAOExcursio {
    }
  }


  namespace ub.edu.resources.dao {
    interface ub.edu.resources.dao.DAOSoci {
        {abstract} + findSociByUserNameAndPassword()
    }
  }
  ub.edu.resources.service.DataService o-- ub.edu.resources.dao.DAOEspecie : daoEspecie
  ub.edu.resources.service.DataService o-- ub.edu.resources.dao.DAOExcursio : daoExcursio
  ub.edu.resources.service.DataService o-- ub.edu.resources.dao.DAOSoci : daoSoci
  ub.edu.resources.service.FactoryMOCK .up.|> ub.edu.resources.service.AbstractFactoryData


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
